# llama.cpp

./: README.md  convert_hf_to_gguf.py
docs/: moss-tts-firstclass-e2e.md  moss-tts-firstclass-e2e_zh.md
examples/parallel/: parallel.cpp
ggml/src/: ggml-backend.cpp
gguf-py/gguf/: constants.py  tensor_mapping.py
include/: llama.h
scripts/: run-moss-tts-delay-8b-quality.sh  run-moss-tts-delay-decode-parity.sh  run-moss-tts-delay-firstclass-parity.sh  run-moss-tts-delay-parity.sh
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-batch.cpp  llama-batch.h  llama-context.cpp  llama-context.h  llama-graph.cpp  llama-graph.h  llama-hparams.h  llama-model.cpp  llama-model.h
src/models/: models.h  moss-tts-delay.cpp
tests/: CMakeLists.txt  moss_tts_delay_export_decode_ref.py  moss_tts_delay_export_generation_ref.py  moss_tts_delay_export_ref.py  test-moss-tts-delay-forward.cpp  test-moss-tts-delay-load.cpp
tools/batched-bench/: batched-bench.cpp
tools/mtmd/: mtmd-helper.cpp
tools/perplexity/: perplexity.cpp
tools/server/: server-context.cpp
tools/tts/: CMakeLists.txt  moss-tts-audio-decode.py  moss-tts-build-generation-ref.py  moss-tts-firstclass-e2e.py  moss-tts-seed-tts-eval-generate.py  moss-tts.cpp
